# stackimport

./: .gitignore  AGENTS.md  CBuf.cpp  CBuf.h  CMakeLists.txt  CODE_QUALITY_REMEDIATION_PLAN.md  CStackFile.cpp  CStackFile.h  DISASSEMBLY_ANNOTATION_PLAN.md  MAC_ROM_ATLAS_FEATURE_REQUESTS.md  Mac68kDisassembly.cpp  Mac68kDisassembly.h  Makefile  README.md  RELEASE.md  RomDasm.cpp  RomDasm.h  StackImportCli.h  StackImportCliCommon.cpp  StackImportCliConvertMode.cpp  StackImportCliImportMode.cpp  StackImportCliOptions.cpp  StackImportCliRomMode.cpp  StackImportCliScanMode.cpp  StackImportMaceDecoder.cpp  StackImportMaceDecoder.h  StackImportMaceResourceDasmAdapter.h  StackImportPhosgHashAdapter.h  StackImportPngWriter.cpp  StackImportPngWriter.h  StackImportResourceDasmDisassemblyAdapter.h  StackImportResourceDasmPictAdapter.h  StackImportResourceFork.cpp  StackImportResourceTransforms.cpp  StackImportResourceTransforms.h  StackImportResourceTypes.h  StackImportRsrcdAdapter.cpp  StackImportRsrcdAdapter.h  StackImportSoundConverter.cpp  StackImportSoundConverter.h  (+28 more)
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  dependency-review.yml  pages.yml  patch-release.yml  release.yml  scorecard.yml  secret-scan.yml  static-analysis.yml
Stack File Format/: AddColor.md  ConversionCorpusGrounding.md  CreysoftFormatAnnotated.md  DefinitiveGuide2011.md  README.md  ResourceForkCoverage.md
cmake/: CliConvertAcceptanceTest.cmake  CombineStaticLibraries.cmake  InstallPkgConfigSmokeTest.cmake  SharedLibrarySymbolSmokeTest.cmake  stackimport.pc.in  stackimport_version.h.in
docs/: format.mdx  index.mdx
docs/c-api/: context.mdx  import.mdx  index.mdx  platform.mdx  reference.mdx  resources.mdx  sound.mdx
docs/cli/: corpus.mdx  import.mdx  index.mdx  rom.mdx  scan.mdx
docs/format/: blocks.mdx
docs/install/: framework.mdx
docs/plans/: code-quality-remediation.mdx  disassembly-annotation.mdx  index.mdx
docs/resources/: conversions.mdx  quicktime-codecs.mdx  quicktime-decoder-implementation-plan.mdx
docs/workflows/: cli-help-acceptance.mdx  cli-import-acceptance.mdx  cli-rom-acceptance.mdx  cli-scan-acceptance.mdx  cli-test-acceptance-scenarios.mdx  corpus-import-run.mdx  cpp-change.mdx  docs-site-change.mdx  format-reverse-engineering.mdx  index.mdx  release-version-update.mdx
include/: stackimport_sax.hpp
scripts/: convert_embedded_files.py  encode_quicktime_from_frames.swift  import_all_stacks.py  next_release_version.py  render_homebrew_formula.py  validate_release_version.py
stackimport.xcodeproj/: project.pbxproj
website/: astro.config.mjs  package.json  pnpm-lock.yaml
website/src/styles/: global.css
